fixes issue causing overlay colors to be incorrect on mobile

--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -97,6 +97,9 @@
             font-weight: 700
             padding: 5px 30px
 
+            @media screen and (max-width: $break-small)
+              color: #{"{{ theme.background_color }}"}
+
 .pagination
   visibility: hidden
   opacity: 0
